--- a/EmployeesAzureFunction.Test/EmployeesAzureFunction.Test.csproj
+++ b/EmployeesAzureFunction.Test/EmployeesAzureFunction.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="xunit" Version="2.4.1" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.3">
@@ -20,8 +21,11 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Helpers\" />
     <Folder Include="Test\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EmployeesAzureFunction.Functions\EmployeesAzureFunction.Functions.csproj" />
   </ItemGroup>
 
 </Project>
